--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lib": "./lib",
     "bin": "./bin"
   },
-  "main": "./lib",
+  "main": "./m4",
   "dependencies": {
     "slide": "~1.1.5",
     "npmlog": "0.0.6"
