--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.2",
+  "version": "0.1.3",
   "name": "m4",
   "description": "M4 macro processor in pure Javascript",
   "keywords": [
@@ -26,6 +26,7 @@
     "bin": "./bin"
   },
   "main": "./m4",
+  "bin": "./m4",
   "files": [
     "lib/",
     "bin/",
@@ -33,7 +34,8 @@
   ],
   "dependencies": {
     "slide": "~1.1.5",
-    "npmlog": "0.0.6"
+    "npmlog": "0.0.6",
+    "nopt": "~2.2.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
