--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "slide": "~1.1.5",
     "npmlog": "0.0.6",
-    "nopt": "~2.2.0"
+    "nopt": "~2.2.0",
+    "sysexits": "^1.0.0"
   },
   "devDependencies": {
     "tape": "~2.4.2",
