--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "faucet": "0.0.1"
   },
   "engines": {
-    "node": ">=0.10"
+    "node": ">=0.10",
+    "npm": ">=1"
   },
   "scripts": {
     "test": "faucet"
